# teletrans

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  teletrans.py
