[project]
name = "teletrans"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.13.3",
    "azure-ai-translation-text==1.0.1",
    "azure-core==1.38.1",
    "emoji==2.15.0",
    "google-cloud-translate==3.20.0",
    "google-genai==1.16.1",
    "lingua-language-detector==2.1.1",
    "protobuf==5.29.5",
    "telethon==1.42.0",
]
